--- a/modules/Loading.less
+++ b/modules/Loading.less
@@ -64,18 +64,17 @@
         bottom: 0;
         right: 0;
         font-size: 15px;
-        margin-top: 0;
-        margin-left: 0;
-        margin-right: 0;
-        margin-bottom: 0;
         border-radius: 0;
+        width: 100% !important;
+        height: 100% !important;
+        transform: none;
+        
     }
     /**无文本时*/
     &.NoText {
-        width: 90px !important;
-        height: 80px !important;
-        margin-left: -45px !important;
-        margin-top: -40px !important;
+        width: 90px;
+        height: 80px;
+       
 
         .Main {
             margin-top: -12px;
