--- a/modules/Loading.less
+++ b/modules/Loading.less
@@ -35,8 +35,8 @@
         font-size: 15px;
         margin-top: 0px;
         border-radius: 0px;
-        height: 26px;
-        width: 100%;
+        height: 26px !important;
+        width: 100% !important;
         z-index: 9999;
         left: 0px;
         top: 20px;
@@ -50,8 +50,8 @@
         font-size: 15px;
         margin-top: 0px;
         border-radius: 0px;
-        height: 26px;
-        width: 100%;
+        height: 26px !important;
+        width: 100% !important;
         z-index: 9999;
         left: 0px;
         top: unset;
