--- a/modules/Loading.less
+++ b/modules/Loading.less
@@ -178,7 +178,7 @@
             .Item (1s, -30deg,-3.5px,-1px);
         }
 
-        @-webkit-keyframes fadeG {
+        @keyframes fadeG {
             0% {
                 background-color: #fff;
             }
@@ -188,36 +188,7 @@
             }
         }
 
-        @-moz-keyframes fadeG {
-            0% {
-                background-color: #fff;
-            }
-
-            100% {
-                background-color: #675e55;
-            }
-        }
-
-        @-o-keyframes fadeG {
-            0% {
-                background-color: #fff;
-            }
-
-            100% {
-                background-color: #675e55;
-            }
-        }
-
-        @-ms-keyframes fadeG {
-            0% {
-                background-color: #fff;
-            }
-
-            100% {
-                background-color: #675e55;
-            }
-        }
-
+        
         &.Large {
             width: 27px;
             height: 27px;
